connectors/edc-ionos-s3-consumer/deployment/k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: quay.io/bcapper30/ionos-s3-consumer
        ports:
        - containerPort: 9191
        - containerPort: 9192  
        - containerPort: 9292  
        - containerPort: 9293
        - containerPort: 9393
        volumeMounts:
        - name: consumer-config-volume
          mountPath: "/app/resources/config.properties"
          subPath: "config.properties"
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"  
          limits:
            memory: "2Gi"
            cpu: "1"     
      volumes:
      - name: consumer-config-volume
        configMap:
          name: consumer-config
---

apiVersion: v1
kind: Service
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  selector:
    app: consumer
  ports:
  - name: api
    port: 9191
    targetPort: 9191
  - name: management
    port: 9192
    targetPort: 9192
  - name: protocol
    port: 9292
    targetPort: 9292
  - name: control
    port: 9293
    targetPort: 9293
  - name: public
    port: 9393
    targetPort: 9393
  type: ClusterIP

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: consumer-management
  labels:
    app: consumer
spec:
  to:
    kind: Service
    name: consumer
  port:
    targetPort: management
  tls:
    termination: edge
